# playhouse-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  arkenar.md  lighthouse.md  mascot.txt  playwright.md  splash.txt  stars.md  third-party-notices.md  trivy.md
.dev/: playhouse-needs-work.md
.dev/issue-bodies/: 15-unpinned-uses.md  16-cache-poisoning.md  17-excessive-permissions.md  18-artipacked.md  19-function-complexity.md  20-nested-control-flow.md  21-file-complexity.md  22-similar-code.md  23-function-parameters.md  24-rustsec-2026-0002.md  25-boolean-logic.md  26-identical-code.md  27-return-statements.md  28-actionlint-expression.md  29-rustsec-2024-0436.md  30-template-injection.md  31-use-trusted-publishing.md  32-rubocop-string-literals.md  33-rubocop-frozen-string-literal.md  34-rubocop-documentation.md
.development/: plan.md
.playhouse/: AGENT.json  BRIEF.md
demo/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh.md
scripts/: README.md  check-version-sync.js  check-version-sync.ts  package-lock.json  package.json  tsconfig.json  update-homebrew-formula.js  update-homebrew-formula.ts  validate-release-matrix.ts
src/: agent.rs  audit.rs  auth.rs  baseplates.rs  cmd.rs  config.rs  config_cli.rs  detect.rs  dev_server.rs  engine_status.rs  install.rs  main.rs  pkgmgr.rs  project.rs  report.rs  score.rs  shell.rs  tools.rs  types.rs  uninstall.rs  update.rs  upgrade.rs  verify_progress.rs  workspace.rs
tests/: cli_integration.rs
(+79 files in other folders)
