[package]
name = "playhouse"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "QA CLI — Playwright, Lighthouse, Trivy, headless agent commands"
repository = "https://github.com/nicholasxdavis/playhouse-cli"
homepage = "https://github.com/nicholasxdavis/playhouse-cli"
readme = "README.md"

[[bin]]
name = "playhouse"
path = "src/main.rs"

[dev-dependencies]
serde_json = "1"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
arboard = "3"
directories = "5"
